# azure-functions-haskell-worker

./: .gitignore  .gitmodules  README.md  cabal.project  hie.yaml
.circleci/: config.yml
azure-functions-tools/: CHANGELOG.md  README.md  azure-functions-tools.cabal
azure-functions-tools/app/: Log.hs  Main.hs  Options.hs
azure-functions-tools/app/Cabal/: Patch.hs
azure-functions-tools/app/Commands/: Init.hs  New.hs  Run.hs
azure-functions-tools/app/Options/: Init.hs
azure-functions-tools/app/Patchers/: Cabal.hs  Haskell.hs  Indented.hs
azure-functions-tools/app/Templates/: IO.hs  New.hs  Project.hs  Utils.hs
azure-functions-worker/: README.md  Setup.hs  azure-functions-worker.cabal
azure-functions-worker/src/Azure/Functions/: Contract.hs  Function.hs  Registry.hs  Worker.hs
azure-functions-worker/src/Azure/Functions/Bindings/: Blob.hs  Class.hs  HTTP.hs  ServiceBus.hs  Shared.hs
azure-functions-worker/src/Azure/Functions/Commands/: Init.hs  Run.hs
azure-functions-worker/src/Azure/Functions/Internal/: Lens.hs  Options.hs  Runtime.hs  Templates.hs
azure-functions-worker/src/Proto/: FunctionRpc_Helpers.hs
azure-functions-worker/test/: MyLibTest.hs
docker/build-image/: Dockerfile
examples/basic/: host.json  local.settings.json
