cabal-version:        2.4

name:                 azure-functions-tools
version:              0.0.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:         LICENSE
-- author:
-- maintainer:
-- copyright:
-- category:
build-type:           Simple
extra-source-files:   CHANGELOG.md

executable azure-functions-tools
  hs-source-dirs:       app
  default-language:     Haskell2010
  main-is:              Main.hs
  other-modules:        Templates.Project
  build-depends:        base                  >= 4.12   && < 4.13
                      , glabrous              >= 2.0.2  && < 3
                      , optparse-applicative
                      , raw-strings-qq        >= 1.1    && < 2
                      , text


