cabal-version:        2.4
name:                 azure-functions-worker
version:              0.0.0.0
synopsis:             Azure Functions Worker
description:          Azure Functions Worker.
license:              MIT
author:               Alexey Raga <alexey.raga@gmail.com>
maintainer:           Alexey Raga <alexey.raga@gmail.com>
category:             Azure, Serverless, Cloud
extra-source-files:   README.md
                      protobuf/src/proto/**/*.proto

custom-setup
  setup-depends:
      Cabal
    , base
    , proto-lens-setup

common config
  default-language:     Haskell2010
  -- ghc-options:          -Wall -Werror

library
  import:               config
  hs-source-dirs:       src
  exposed-modules:      Azure.Functions.Worker

  autogen-modules:      Proto.FunctionRpc
                        Proto.FunctionRpc_Fields
                        Proto.Identity.ClaimsIdentityRpc
                        Proto.Shared.NullableTypes

  other-modules:        Azure.Functions.Commands.Init
                        Azure.Functions.Commands.Run
                        Azure.Functions.Internal.Templates
                        Proto.FunctionRpc
                        Proto.FunctionRpc_Fields
                        Proto.Identity.ClaimsIdentityRpc
                        Proto.Shared.NullableTypes

  build-tool-depends:   proto-lens-protoc:proto-lens-protoc

  build-depends:        base                          >= 4.12     && < 4.13
                      , directory
                      , filepath
                      , glabrous                      >= 2.0.2    && < 3
                      , http2-grpc-proto-lens         >= 0.1      && < 0.2
                      , optparse-applicative          >= 0.15.1   && < 0.16
                      , proto-lens-runtime
                      , proto-lens-protobuf-types
                      , raw-strings-qq                >= 1.1      && < 2
                      , text
                      , warp-grpc                     >= 0.4.0.1  && < 0.5
                      , warp-tls                      >= 3.2.12   && < 3.3
                      , warp                          >= 3.3.9    && < 3.4

test-suite azure-functions-test
  import:               config
  hs-source-dirs:       test
  type:                 exitcode-stdio-1.0
  main-is:              MyLibTest.hs
  build-depends:        base >=4.12 && <4.13
                      , azure-functions-worker
